# VocalTractLab-Python

./: .gitignore  CODEOWNERS  MANIFEST.in  README.md  calc_tract_data.py  formants_random_uniform_10.txt  formants_random_uniform_100.txt  formants_random_uniform_1000.txt  formants_random_uniform_10000.txt  formants_random_uniform_500.txt  pyproject.toml  random_sampling.py  random_states_uniform_10.txt  random_states_uniform_100.txt  random_states_uniform_1000.txt  random_states_uniform_10000.txt  setup.cfg  setup.py  test.py  transfer_random_uniform_10000.txt
PyVTL/: F0_Manipulation.py  PyVTL.py  VocalTractLabApi.c  VocalTractLabApi.pyx  __init__.py  audio_tools.py  boundaries.py  core.py  dprecated_setup.py  frequency_domain.py  function_tools.py  g2p.py  phonemes.py  plausibility_transformation.py  plotting_tools.py  segment_sequence.py  target_estimation.pyx  targets.py  text_to_speech.py  tract_sequence.py  tube_states.py  utils_method.py  vtl.py
PyVTL/src/targetoptimizer-backend/: BobyqaOptimizer.cpp  BobyqaOptimizer.h  CMakeLists.txt  CdlpFilter.cpp  CdlpFilter.h  OptimizationProblem.h  TamModelF0.cpp  TamModelF0.h  TargetOptimizerApi.def  TargetOptimizerApi.h
VocalTractLab/: VocalTractLabApi.c  VocalTractLabApi.pyx  VocalTractLabApi_cython.pyx  __init__.py  audio_tools.py  audioprocessing.py  cVocalTractLabApi.pxd  core.py  dynamics.py  frequency_domain.py  function_tools.py  g2p.py  mc_generator.py  phonemes.py  plotting_tools.py  segment_sequence.py  target_estimation.cpp  target_estimation.pyx  targets.py  text_to_speech.py  tract_sequence.py  tube_state.py  tube_states.py  utils.py  vtl_phonemes.py
VocalTractLab/src/vocaltractlab-backend/: CMakeLists.txt  F0EstimatorYin.cpp  GeometricGlottis.cpp  IirFilter.h  ImpulseExcitation.h  Splines.h  Surface.cpp  Surface.h  TdsModel.cpp  VocalTract.cpp  VocalTract.h  VocalTractLabApi.cpp  VocalTractLabApi.def  VocalTractLabApi.h  VocalTractLabApi.vcxproj  XmlHelper.cpp  XmlHelper.h
vocaltractlab/: __init__.py  audioprocessing.py  core.py  frequency_domain.py  process.py  tube_state.py  utils.py  vtl_core.py
(+145 files in other folders)
